# SysOpy

./: README.md
kolos_practise/: kolos1_overview_1.c  kolos2_overview_1.c  lab1.c  lab10_server.c  lab2.c  lab3.c  lab4_master.c  lab4_slave.c  lab5.c  lab6.c  lab7_child_posix.c  lab7_child_sysv.c  lab7_parent_posix.c  lab7_parent_sysv.c  lab7_posix_common.h  lab7_sysv_common.h  lab8.c  lab9.c
lab1/: CMakeLists.txt  library.c  library.h  main.c  main_dynamic.c
lab10/zad1/: client.c  common.h  server.c
lab10/zad2/: client.c  common.h  server.c
lab2/: CMakeLists.txt  main.c
lab2/zad1/: main.c  test2.txt  test3.txt  wyniki.txt
lab2/zad2/: main.c
lab3/zad1/: main.c
lab3/zad2/: main.c  return_neg.c  tst
lab3/zad3/: main.c  mem_exceed.c  return_neg.c  time_exceed.c
lab4/zad1/: main.c  main_v2.c  script.sh
lab4/zad2/: child.c  main.c
lab4/zad3/: child.c  main.c
lab5/zad1/: batchfile  main.c
lab5/zad2/: master.c  slave.c
lab6/zad1/: client.c  queuedetails.h  server.c
lab6/zad2/: client.c  queuedetails.h  server.c
lab7/: CMakeLists.txt
lab7/zad1/: golibroda.c  klienci.c  shared.c  shared.h
lab7/zad2/: golibroda.c  klienci.c  shared.c  shared.h
lab8/: CMakeLists.txt  filter_generator.c  main.c
lab9/zad1/: main.c  parameters
lab9/zad2/: main.c  parameters
